# bl-visualiser

./: bouldering_league_scores.db  pyproject.toml
bl_visualiser/: api.py  crud.py  database.py  distribution_functions.py  models.py  schemas.py
bl_visualiser/app/: app.py
bl_visualiser/generators/: generate_competition_dataset.py  generate_scorecard.py  generate_scores.py
tests/test_distribution_functions/: test_bin_scores.py  test_create_scores.py
tests/test_generate_data/: test_bin_scores.py  test_create_distribution.py  test_create_scores.py
tests/test_generators/test_generate_competition_dataset/: test_create_competition_dataset.py
tests/test_generators/test_generate_scorecard/: test_create_scorecard.py  test_scorecard_to_dataframe.py
tests/test_generators/test_generate_scores/: test_bin_scores.py  test_create_distribution.py  test_create_scores.py
