[tool.poetry]
name = "bl-visualiser"
version = "0.1.0"
description = ""
authors = ["Joe Beaver <joseph.beaver@gmail.com>"]
readme = "README.md"
packages = [{include = "bl_visualiser"}]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.18.15"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
pydantic = "^2.2.1"
plotly = "^5.16.1"
streamlit = "^1.25.0"
sqlalchemy = "^2.0.20"
fastapi = "^0.102.0"
uvicorn = "^0.23.2"
loguru = "^0.7.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.25.0"
black = "^23.7.0"
ruff = "^0.0.284"
pytest = "^7.4.0"
faker = "^19.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
